--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -1,7 +1,17 @@
 body {
+background-image: url("http://getwallpapers.com/wallpaper/full/0/9/f/1071475-gorgerous-funny-cat-desktop-wallpaper-1920x1080.jpg");
+background-size: 100% 100%;
+background-position: center;
 background-color: black;
 color: white;
+text-shadow: 1px 0 black, 1px 0 black, 1px 0 black, 0 1px black;
 text-align: center;
+font-family: comic serif;
+}
+#premiseText {
+  text-align: justify;
+  padding: 100px;
+  font-size: 25px;
 }
 .header {
   font-size: 72px;
@@ -11,4 +21,8 @@ text-align: center;
 }
 .buttons {
   font-size: 15px;
+}
+.mainDisplayOptionText{
+  font-size: 30px;
+  font-family: comic serif;
 }
