--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -1,12 +1,15 @@
 body {
-background-image: url("http://getwallpapers.com/wallpaper/full/0/9/f/1071475-gorgerous-funny-cat-desktop-wallpaper-1920x1080.jpg");
-background-size: 100% 100%;
-background-position: center;
-background-color: black;
 color: white;
 text-shadow: 1px 0 black, 1px 0 black, 1px 0 black, 0 1px black;
 text-align: center;
 font-family: comic serif;
+}
+html {
+  background: url("http://getwallpapers.com/wallpaper/full/0/9/f/1071475-gorgerous-funny-cat-desktop-wallpaper-1920x1080.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 #premiseText {
   text-align: justify;
