--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -1,8 +1,9 @@
 body {
 color: white;
-text-shadow: 1px 0 black, 1px 0 black, 1px 0 black, 0 1px black;
+text-shadow: 1px 0 black, 1px 0 black, 2px 0 black, 0 2px black;
 text-align: center;
 font-family: comic serif;
+font-size: 22px;
 }
 html {
   background: url("http://getwallpapers.com/wallpaper/full/0/9/f/1071475-gorgerous-funny-cat-desktop-wallpaper-1920x1080.jpg") no-repeat center center fixed;
@@ -11,19 +12,34 @@ html {
   -o-background-size: cover;
   background-size: cover;
 }
+#premiseInput {
+  vertical-align: middle;
+  font-size: inherit;
+  font-family: inherit;
+  font-weight: inherit;
+}
+#optionInput{
+  height: 25px;
+  width: 500px;
+  font-size: 20px;
+  text-align: center;
+}
 #premiseText {
   text-align: justify;
   padding: 100px;
-  font-size: 25px;
+  font-size: 27px;
+}
+.links {
+  font-size: 30px;
 }
 .header {
   font-size: 72px;
 }
 .labels {
-  font-size: 25px;
+  font-size: 30px;
 }
 .buttons {
-  font-size: 15px;
+  font-size: 20px;
 }
 .mainDisplayOptionText{
   font-size: 30px;
