--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -1,6 +1,5 @@
 body {
 color: white;
-text-shadow: 1px 0 black, 1px 0 black, 2px 0 black, 0 2px black;
 text-align: center;
 font-family: comic serif;
 font-size: 22px;
@@ -24,6 +23,7 @@ html {
   font-size: 20px;
 }
 #premiseText {
+  text-shadow: 2px 0 black, 2px 0 black, 2px 0 black, 0 2px black;
   text-align: justify;
   padding: 100px;
   font-size: 27px;
@@ -43,4 +43,17 @@ html {
 .mainDisplayOptionText{
   font-size: 30px;
   font-family: comic serif;
+  font-weight: bold;
+}
+a{
+  text-decoration: none;
+}
+#mainDisplayEndBranch{
+  color: darkred;
+}
+#mainDisplayAddNewOptionTwo{
+  color: #25628D;
+}
+#mainDisplayAddNewOptionOne{
+  color: #25628D;
 }
