--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -45,9 +45,13 @@ html {
   font-family: comic serif;
   font-weight: bold;
 }
-a{
+a:link {
   text-decoration: none;
 }
+a:hover {
+  color: red;
+}
+#mainDisplayAddNewOptionTwo
 #mainDisplayEndBranch{
   color: darkred;
 }
