--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -37,8 +37,9 @@ html {
 .labels {
   font-size: 30px;
 }
-.buttons {
+button {
   font-size: 20px;
+  border-radius: 50px;
 }
 .mainDisplayOptionText{
   font-size: 30px;
