last bits of pretties

--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -69,7 +69,6 @@ button{
   box-shadow: 2px 3px grey;
   margin-bottom: 10px;
   margin-top: 10px;
-  font-weight: ;
 }
 button:hover{
   background-color: #cc0000;
@@ -94,36 +93,40 @@ button:hover{
 /*color for end link*/
 #mainDisplayEndBranch{
   color: darkred;
+  text-shadow: 1px 0 #f2f2f2, 1px 0 #f2f2f2, 1px 0 #f2f2f2, 0 1px #f2f2f2;
 }
 /*color for end link on hover*/
 #mainDisplayEndBranch:hover{
   color: red;
-  font-weight: bold;
+  text-decoration: underline;
 }
 /*color for add new option link*/
 #mainDisplayAddNewOptionTwo{
   color: #25628D;
+  text-shadow: 1px 0 #f2f2f2, 1px 0 #f2f2f2, 1px 0 #f2f2f2, 0 1px #f2f2f2;
 }
 /*color for new option link on hover*/
 #mainDisplayAddNewOptionTwo:hover{
   color: red;
-  font-weight: bold;
+  text-decoration: underline;
 }
 /*color for add new option link*/
 #mainDisplayAddNewOptionOne{
   color: #25628D;
+  text-shadow: 1px 0 #f2f2f2, 1px 0 #f2f2f2, 1px 0 #f2f2f2, 0 1px #f2f2f2;
 }
 /*color for new option link on hover*/
 #mainDisplayAddNewOptionOne:hover{
   color: red;
-  font-weight: bold;
+  text-decoration: underline;
 }
 /*takes away lines from links*/
 a:link{
   text-decoration: none;
+  text-shadow: 1px 0 #f2f2f2, 1px 0 #f2f2f2, 1px 0 #f2f2f2, 0 1px #f2f2f2;
 }
 /*hover for links not covered above*/
 a:hover{
   color: red;
-  font-weight: bold;
+  text-decoration: underline;
 }
